--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "README.md",
     "LICENSE"
   ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/derekvmcintire/simple-fetch-ts.git"
+  },
   "scripts": {
     "pretty": "npx prettier . --write",
     "clean": "rm -rf dist",
