--- a/package.json
+++ b/package.json
@@ -21,7 +21,46 @@
     "dev": "ts-node src/index.ts",
     "test": "jest"
   },
-  "keywords": [],
+  "keywords": [
+    "typescript",
+    "http",
+    "simple",
+    "ts",
+    "simple-fetch",
+    "fetch",
+    "http-client",
+    "builder-pattern",
+    "api-client",
+    "http-requests",
+    "api-request-builder",
+    "type-safe",
+    "type",
+    "typed",
+    "strongly",
+    "safe",
+    "safety",
+    "network",
+    "request",
+    "json",
+    "response",
+    "api",
+    "http-methods",
+    "fluent-api",
+    "http-library",
+    "query-parameters",
+    "error-handling",
+    "http-response",
+    "fetch-api",
+    "api-requests",
+    "json",
+    "type-safe-requests",
+    "typescript-library",
+    "rest-api",
+    "http-request-builder",
+    "http-utils",
+    "ts-fetch",
+    "fetch-ts"
+  ],
   "author": "",
   "license": "ISC",
   "description": "",
